# modelbox

./: .gitignore  .gitpod.yml  .goreleaser.yaml  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.toml  README.md  Tutorial_Pytorch.ipynb  build.rs  docker-compose.yaml  go.mod  go.sum
agents/basic-pytorch-inspector/: inspect.py
agents/py/: agent.py  client.py
client/: client.go  config.go  config_test.go
client-go/: client.go  config.go
client-go/proto/: service.pb.go  service_grpc.pb.go
client-py/: README.md  requirements.txt  setup.cfg
client-py/modelbox/: __init__.py  gen_proto.sh  lightning_logger.py  modelbox.py  service_pb2.py  service_pb2_grpc.py
client-py/tests/: test_modelbox_api.py
client-rs/: Cargo.toml  build.rs
client-rs/src/: lib.rs
cmd/modelbox/: actions.go  artifacts.go  bindata.go  checkpoints.go  client.go  experiments.go  models.go  root.go  server.go  start.go  ui.go
demos/lightning/: checkpoint.py  model_box_logger.py  train.py
deploy/scripts/: compose_start.sh  gitpod_init.sh  jupyter_server_start.sh
docker/: Dockerfile
entity/: Cargo.toml
entity/src/: events.rs  experiments.rs  files.rs  lib.rs  metadata.rs  metrics.rs  model_versions.rs  models.rs  mutations.rs  prelude.rs
migration/src/: m20220101_000001_create_table.rs
proto/: admin.proto  gen_proto.sh  service.pb.go  service.proto  service_grpc.pb.go
python-rpc-client/: Cargo.toml  build.rs  pyproject.toml
python-rpc-client/src/: api_structs.rs  lib.rs  mock.rs  modelbox.rs
sdk-go/: client.go  config.go  config_test.go
sdk-go/proto/: admin.pb.go  admin_grpc.pb.go  service.pb.go  service_grpc.pb.go
sdk-py/: LICENSE  README.md  setup.cfg
sdk-py/modelbox/: admin_pb2.py  admin_pb2_grpc.py  client.py  lightning_logger.py  modelbox.py  notebook_widgets.py  resource_usage.py  service_pb2.py  service_pb2_grpc.py
sdk-py/tests/: test_modelbox_api.py
server/: action_scheduler.go  action_scheduler_test.go  admin.go  agent.go  grpc_web_middleware.go  prom.go  proto_utils.go  server.go
server/config/: config.go  config_test.go  modelbox.toml
server/membership/: membership.go  mysql_test.go  sql.go  sql_test.go  static.go
server/scheduler/: action_scheduler.go  action_scheduler_test.go  trigger_evaluator.go  trigger_evaluator_test.go
server/storage/: archiver.go  ephemeral.go  ephemeral_test.go  file_blob_storage.go  inmem_experiment_logger.go  mysql.go  mysql_test.go  mysql_utils.go  postgres_test.go  postgres_utils.go  postgresql.go  sql_mapper_structs.go  sql_storage.go  sqlite3.go  sqlite3_test.go  storage.go  storage_config.go  storage_interface_test.go  storage_test.go
server/utils/: hash.go
src/: agent.rs  grpc_server.rs  main.rs  model_helper.rs  modelbox.rs  repository.rs  server_config.rs
tests/: integration_test.rs  setup.rs
tutorials/: Pytorch_Lightning_Integration_Tutorial.ipynb  Tutorial_Python_SDK.ipynb  Tutorial_Pytorch.ipynb
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/blog/: authors.yml
(+48 files in other folders)
