[metadata]
name = modelbox
version = 0.0.2
author = Diptanu Gon Choudhury
author_email = diptanuc@gmail.com
description = Client Library of the ModelBox Service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/diptanu/modelbox
classifiers = 
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages =
    modelbox
python_requires = >=3.7
install_requires =
    grpcio>=1.46.1
    grpcio-tools>=1.46.1
    protobuf>=3.20.1