[package]
name = "modelbox-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "1.17.0", features = ["full"]}
anyhow = "1.0.56"
tonic = "0.5"
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"


